layout changes all pages
Layout changes on all applicable pages

--- a/index.html
+++ b/index.html
@@ -9,12 +9,23 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
     <!--Internal-->
     <link rel ="stylesheet" href="css/main.css">
-    <title>Document</title>
+    <title>Term1Final</title>
 </head>
 <body>
     
     <div class="container-fluid">
-        <nav></nav>
+        <nav>
+            <div class="logo">logo</div>
+            <div class="nav-bar">
+                <div class="buttons">
+                    <ul>
+                        <a href="/pages/aboutUs.html"><li>about us</li></a>
+                        <a href="/pages/favourites.html"><li>favourites</li></a>
+                        <li>wha</li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
         <header>
                 <h3>Artist</h3>
                 <h1>Album Name</h1>
@@ -37,5 +48,146 @@
                 </div>
             </div>
         </section>
+        <section class="four">
+            <h3>Recent Releases</h3>
+            <div class="col-3-two">
+                <div class="backgroundIMG1">
+                    <div class="overlay">
+                        <div class="icon"></div>
+                        <div class="content">
+                            <h3>Album Name</h3>
+                            <p>Artist Name</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-3-two">
+                <div class="backgroundIMG2">
+                    <div class="overlay">
+                        <div class="icon"></div>
+                        <div class="content">
+                            <h3>Album Name</h3>
+                            <p>Artist Name</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-3-two">
+                <div class="backgroundIMG3">
+                    <div class="overlay">
+                        <div class="icon"></div>
+                        <div class="content">
+                            <h3>Album Name</h3>
+                            <p>Artist Name</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-3-two">
+                <div class="backgroundIMG4">
+                    <div class="overlay">
+                        <div class="icon"></div>
+                        <div class="content">
+                            <h3>Album Name</h3>
+                            <p>Artist Name</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+                <section class="four">
+            <h3>Popular Albums</h3>
+            <div class="col-3-two">
+                <div class="backgroundIMG5">
+                    <div class="overlay">
+                        <div class="icon"></div>
+                        <div class="content">
+                            <h3>Album Name</h3>
+                            <p>Artist Name</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-3-two">
+                <div class="backgroundIMG6">
+                    <div class="overlay">
+                        <div class="icon"></div>
+                        <div class="content">
+                            <h3>Album Name</h3>
+                            <p>Artist Name</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-3-two">
+                <div class="backgroundIMG7">
+                    <div class="overlay">
+                        <div class="icon"></div>
+                        <div class="content">
+                            <h3>Album Name</h3>
+                            <p>Artist Name</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-3-two">
+                <div class="backgroundIMG8">
+                    <div class="overlay">
+                        <div class="icon"></div>
+                        <div class="content">
+                            <h3>Album Name</h3>
+                            <p>Artist Name</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-3-two">
+                <div class="backgroundIMG9">
+                    <div class="overlay">
+                        <div class="icon"></div>
+                        <div class="content">
+                            <h3>Album Name</h3>
+                            <p>Artist Name</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-3-two">
+                <div class="backgroundIMG10">
+                    <div class="overlay">
+                        <div class="icon"></div>
+                        <div class="content">
+                            <h3>Album Name</h3>
+                            <p>Artist Name</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-3-two">
+                <div class="backgroundIMG11">
+                    <div class="overlay">
+                        <div class="icon"></div>
+                        <div class="content">
+                            <h3>Album Name</h3>
+                            <p>Artist Name</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-3-two">
+                <div class="backgroundIMG12">
+                    <div class="overlay">
+                        <div class="icon"></div>
+                        <div class="content">
+                            <h3>Album Name</h3>
+                            <p>Artist Name</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
+        <footer>
+            <div></div>
+        </footer>
     </div>
