--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <div class="nav-bar">
             <div class="buttons">
                 <a><button type="button" class="btn">Recent Releases</button></a>
-                <a><button type="button" class="btn">Favorites</button></a>
-                <a href="/pages/aboutLabel.html" type="button" class="btn">Popular Albums</button></a>
+                <a><button type="button" class="btn">Popular Albums</button></a>
+                <a href="/pages/aboutLabel.html" type="button" class="btn">About Label</button></a>
                 <a href="/pages/playlists.html"><button type="button" class="btn">Playlists</button></a>
                 <!--<ul>
                     <a href="/pages/aboutUs.html"><li>about us</li></a>
