--- a/pages/aboutLabel.html
+++ b/pages/aboutLabel.html
@@ -21,8 +21,8 @@
             <div class="nav-bar">
                 <div class="buttons">
                     <a><button type="button" class="btn">Recent Releases</button></a>
-                    <a><button type="button" class="btn">Favorites</button></a>
-                    <a href="/pages/aboutLabel.html" type="button" class="btn">Popular Albums</button></a>
+                    <a><button type="button" class="btn">Popular Albums</button></a>
+                    <a href="/pages/aboutLabel.html" type="button" class="btn">About Label</button></a>
                     <a href="/pages/playlists.html"><button type="button" class="btn">Playlists</button></a>
                 </div>
                 <div class="search">Search bar<img class="search-scope" src = "/assets/icons/other/search_icon.svg"></div>
